# binaris-nanod

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
firmware/: Cargo.toml  FIRST_BOOT.md  HARDWARE_TEST_PLAN.md  MIGRATION_STATUS.md  lvgl_bindings.h  nanod_motor_bindings.h  partitions.csv  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/components/nanod_motor/: CMakeLists.txt  arduino_shim.h  ext_sensor.h  haptic.cpp  haptic.h  haptic_api.h  nanod_motor.cpp
firmware/components/nanod_motor/include/: nanod_motor.h
firmware/components/nanod_motor/simplefoc/: Arduino.h  BLDCDriver3PWM.h  BLDCMotor.cpp  BLDCMotor.h  CurrentSense.h  FOCMotor.cpp  FOCMotor.h  Sensor.cpp  SimpleFOCDebug.h  esp32_driver_mcpwm.h  esp32_ledc_mcu.cpp  hardware_api.h
firmware/nanod-math/: Cargo.toml
firmware/nanod-math/src/: lib.rs
firmware/nanod-math/src/haptic/: mod.rs  pid.rs  profile.rs  state.rs
firmware/nanod-math/src/hmi/: button.rs  mod.rs  types.rs
firmware/nanod-math/src/led/: button_leds.rs  mod.rs  ring.rs  types.rs
firmware/nanod-math/src/motor/: foc.rs
firmware/nanod-math/src/profile/: manager.rs
firmware/nanod-math/src/protocol/: command.rs  mod.rs  parse.rs  serialize.rs
firmware/src/: ipc.rs  main.rs  pins.rs
firmware/src/com/: com_thread.rs  dispatch.rs  mod.rs
firmware/src/display/: display_thread.rs  gc9a01.rs  lvgl_driver.rs  mod.rs
firmware/src/haptic/: mod.rs
firmware/src/hmi/: buttons.rs  hmi_thread.rs  leds.rs  mod.rs
firmware/src/motor/: calibration.rs  driver.rs  encoder.rs  mod.rs
firmware/src/thread/: foc_thread.rs  mod.rs
tools/nanod/: Cargo.toml
tools/nanod/src/: cli.rs  main.rs
tools/nanod/src/commands/: backup.rs  flash.rs  mod.rs  monitor.rs  recover.rs  restore.rs  validate.rs
tools/nanod/src/commands/media/: controller.rs  image_convert.rs  media_source.rs  mod.rs
tools/nanod/src/commands/test/: audio.rs  buttons.rs  display.rs  haptic.rs  leds.rs  mod.rs  motor.rs  runner.rs  serial.rs  serial_proto.rs
tools/nanod/src/device/: connection.rs  constants.rs  mod.rs  partitions.rs
tools/nanod/src/util/: error.rs  progress.rs
tools/nanod/src/validate/: binary.rs  checksum.rs  mod.rs  partition.rs
